--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines":{"node": "20.x"},
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon your-app.js",
@@ -17,6 +19,7 @@
     "@google-cloud/storage": "^7.11.2",
     "@google-cloud/text-to-speech": "^5.3.0",
     "@google-cloud/translate": "^8.3.0",
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
