--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "fs": "^0.0.1-security",
     "google-auth-library": "^9.11.0",
     "grpc-tools": "^1.12.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
